# cmake

./: CMakeLists.txt  README.md
include/: math.hpp
src/: main.cpp
src/math/: math.cpp
